--- a/src/App/style.css
+++ b/src/App/style.css
@@ -5,8 +5,9 @@ body{
     justify-content: center;
     align-items: center;
 }
-button{
-    background-color: black;
+button,
+.button{
+    background-color: rgb(92, 92, 92);
     color: white;
     border-radius: 7px;
     padding: 3px 7px;
@@ -15,4 +16,7 @@ button{
 input{
     border: 2px solid black;
     border-radius: 7px;
+}
+.pressed{
+    background-color: rgb(0, 0, 0); 
 }
